--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@auth0/angular-jwt": "^5.2.0",
     "feed-back-app": "file:",
     "jwt-decode": "^4.0.0",
+    "ngx-toastr": "^19.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
